welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:2: error: reassignment to val
if (a=b & b=c & a=2){
     ^redTicket:5: error: reassignment to val
if (a=b & b=c & a=!2){
     ^redTicket:8: error: value =! is not a member of Int
if (a!=b &a=!c){
           ^